--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       crossorigin="anonymous"
     />
     <script src="main.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body border-dark p-3">
@@ -34,122 +38,169 @@
             alt="Home Icon"
             width="50"
             height="50"
-        /></a>
+        /> OmanGo</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active"  id="nav-route" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Register</a
+              <a class="nav-link active" id="nav-route" aria-current="page" href="#"
+                >Create</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" id="nav-route" aria-current="page" href="#">About</a>
+            </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-info bg-body" type="submit">
-              Search
-            </button>
-          </form>
+          <button class="btn btn-dark">
+            <a aria-current="page" href="#" style="text-decoration: none; color: white !important;"
+              >Register</a
+            >
+          </button>
         </div>
       </div>
     </nav>
     <main class="p-3">
-      <div class="container rounded-4 p-4 w-75 h-100 bg-body">
-        <div class="row">
-          <div class="card m-2" style="width: 18rem">
+      <div class="container rounded-4 p-4 w-75 bg-body">
+        <!-- top of main container -->
+        <h1 class="title text-center text title-font">Manage Blog Posts</h1>
+        <p class="text-center fw-light lh-lg">
+          Here you can search for a blog post to edit or update or delete,
+          <br />
+          or you can create a new blog post from scratch
+        </p>
+        <!-- search bar -->
+        <form class="d-flex pt-3 input-group input-group-lg" role="search">
+          <input
+            class="form-control"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button
+            class="btn btn-outline-info bg-body"
+            id="search-button"
+            type="submit"
+          >
+            Search
+          </button>
+          <div class=""></div>
+        </form>
+        <!-- cards container -->
+        <div class="container pt-4"  id="cards-container">
+          <div class="card m-2 col-12 col-md-6 col-lg-4 ">
             <img
               src="https://pbs.twimg.com/media/EVgVuB4XgAEiZ8G?format=jpg&name=large"
+              alt="  "
               class="card-img-top"
-              alt="..."
             />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+            <div class="card-body p-4">
+              <h5 class="card-title fw-bolder">Dhofar</h5>
+              <p class="card-text fw-lighter">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui
+                nulla blanditiis quo, error aperiam iure soluta perferendis
+                doloremque itaque exercitationem hic distinctio ea, iste
+                obcaecati vel, in vitae illo? Corrupti!
               </p>
-              <a href="#" class="btn btn-info text-light">Edit Post</a>
+              <button class="btn btn-outline">
+                <i class="bi-trash" style="font-size: 20px"></i>
+              </button>
+              <button class="btn btn-outline">
+                <i class="bi-pencil-fill" style="font-size: 20px"></i>
+              </button>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><i class="bi-geo-alt-fill pe-3"></i> Location</li>
+              <li class="list-group-item"><i class="bi-tags-fill pe-3"></i> Categories</li>
+              <li class="list-group-item"><i class="bi-play-btn-fill pe-3"></i> Video Url</li>
+            </ul>
           </div>
-
-          <div class="card m-2" style="width: 18rem">
+          <div class="card m-2 col-12 col-md-6 col-lg-4">
             <img
-              src="https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=360x360"
+              src="https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=large"
+              alt="  "
               class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+              />
+            <div class="card-body p-4">
+              <h5 class="card-title fw-bolder">Dhofar</h5>
+              <p class="card-text fw-lighter">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui
+                nulla blanditiis quo, error aperiam iure soluta perferendis
+                doloremque itaque exercitationem hic distinctio ea, iste
+                obcaecati vel, in vitae illo? Corrupti!
               </p>
-              <a href="#" class="btn btn-info text-light">Edit Post</a>
+              <button class="btn btn-outline">
+                <i class="bi-trash" style="font-size: 20px"></i>
+              </button>
+              <button class="btn btn-outline">
+                <i class="bi-pencil-fill" style="font-size: 20px"></i>
+              </button>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><i class="bi-geo-alt-fill pe-3"></i> Location</li>
+              <li class="list-group-item"><i class="bi-tags-fill pe-3"></i> Categories</li>
+              <li class="list-group-item"><i class="bi-play-btn-fill pe-3"></i> Video Url</li>
+            </ul>
           </div>
-          <div class="card m-2" style="width: 18rem">
+          <div class="card m-2 col-12 col-md-6 col-lg-4">
             <img
-              src="https://pbs.twimg.com/media/EjV9MpUXsAEOcOs?format=jpg&name=large"
+            src="https://pbs.twimg.com/media/EZvjK-XXkAA0v4X?format=jpg&name=large"
+              alt="  "
               class="card-img-top"
-              alt="..."
             />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+            <div class="card-body p-4">
+              <h5 class="card-title fw-bolder">Dhofar</h5>
+              <p class="card-text fw-lighter">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui
+                nulla blanditiis quo, error aperiam iure soluta perferendis
+                doloremque itaque exercitationem hic distinctio ea, iste
+                obcaecati vel, in vitae illo? Corrupti!
               </p>
-              <a href="#" class="btn btn-info text-light">Edit Post</a>
+              <button class="btn btn-outline">
+                <i class="bi-trash" style="font-size: 20px"></i>
+              </button>
+              <button class="btn btn-outline">
+                <i class="bi-pencil-fill" style="font-size: 20px"></i>
+              </button>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><i class="bi-geo-alt-fill pe-3"></i> Location</li>
+              <li class="list-group-item"><i class="bi-tags-fill pe-3"></i> Categories</li>
+              <li class="list-group-item"><i class="bi-play-btn-fill pe-3"></i> Video Url</li>
+            </ul>
           </div>
-        </div>
-        <div class="row">
-          <div class="card m-2" style="width: 18rem">
+          <div class="card m-2 col-12 col-md-6 col-lg-4">
             <img
-              src="https://pbs.twimg.com/media/Ei0rVcBWsAE2rXP?format=jpg&name=360x360"
+              src="https://pbs.twimg.com/media/Ehtn4sDWsAARNX7?format=jpg&name=large"
+              alt="  "
               class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+              />
+              <div class="card-body p-4">
+                <h5 class="card-title fw-bolder">Dhofar</h5>
+                <p class="card-text fw-lighter">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui
+                nulla blanditiis quo, error aperiam iure soluta perferendis
+                doloremque itaque exercitationem hic distinctio ea, iste
+                obcaecati vel, in vitae illo? Corrupti!
               </p>
-              <a href="#" class="btn btn-info text-light">Edit Post</a>
+              <button class="btn btn-outline">
+                <i class="bi-trash" style="font-size: 20px"></i>
+              </button>
+              <button class="btn btn-outline">
+                <i class="bi-pencil-fill" style="font-size: 20px"></i>
+              </button>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="card text-bg-dark w-50">
-            <img
-              src="https://pbs.twimg.com/media/Ei0rVcBWsAE2rXP?format=jpg"
-              class="card-img"
-              alt="..."
-            />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Salalah</h5>
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">Last updated 3 mins ago</p>
-            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><i class="bi-geo-alt-fill pe-3"></i> Location</li>
+              <li class="list-group-item"><i class="bi-tags-fill pe-3"></i> Categories</li>
+              <li class="list-group-item"><i class="bi-play-btn-fill pe-3"></i> Video Url</li>
+            </ul>
           </div>
         </div>
       </div>
     </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
