--- a/create_post.html
+++ b/create_post.html
@@ -1,89 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Oman Go Blog Creator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-    <script
-      type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key="
-    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key="></script>
     <script src="https://unpkg.com/location-picker/dist/location-picker.min.js"></script>
     <script src="main.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="node_modules/easymde/dist/easymde.min.css" />
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg bg-body border-dark p-3">
       <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
-          <img
-            src="https://www.svgrepo.com/show/288045/suitcase-travel.svg"
-            alt="Home Icon"
-            width="50"
-            height="50"
-          />
-          OmanGo</a
-        >
+          <img src="https://www.svgrepo.com/show/288045/suitcase-travel.svg" alt="Home Icon" width="50" height="50" />
+          OmanGo</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="nav-route"
-                aria-current="page"
-                href="#"
-                >Home</a
-              >
+              <a class="nav-link active" id="nav-route" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="nav-route"
-                aria-current="page"
-                href="#"
-                >Create</a
-              >
+              <a class="nav-link active" id="nav-route" aria-current="page" href="#">Create</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="nav-route"
-                aria-current="page"
-                href="#"
-                >About</a
-              >
+              <a class="nav-link active" id="nav-route" aria-current="page" href="#">About</a>
             </li>
           </ul>
           <button class="btn btn-dark">
-            <a
-              aria-current="page"
-              href="#"
-              style="text-decoration: none; color: white !important"
-              >Register</a
-            >
+            <a aria-current="page" href="#" style="text-decoration: none; color: white !important">Register</a>
           </button>
         </div>
       </div>
@@ -101,9 +57,7 @@
         <div class="container m-3 p-3 border rounded-3 bg-light">
           <form action="" method="get">
             <div class="input-group mb-3">
-              <span class="input-group-text text-bg-light"
-                >Location Name :</span
-              >
+              <span class="input-group-text text-bg-light">Location Name :</span>
               <input type="text" name="locationName" class="form-control" />
             </div>
             <div class="input-group mb-3">
@@ -111,14 +65,10 @@
               <input type="text" name="videoUrl" class="form-control" />
             </div>
             <div class="input-group mb-3">
-              <button class="btn btn-outline-secondary" type="button">
+              <button class="btn btn-outline-secondary" id="addCategory" type="button">
                 Add Category
               </button>
-              <select
-                class="form-select"
-                id="inputGroupSelect03"
-                aria-label="Example select with button addon"
-              >
+              <select class="form-select" id="inputGroupSelect03" aria-label="Example select with button addon">
                 <option selected>Choose...</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
@@ -126,32 +76,150 @@
               </select>
             </div>
             <div class="container mb-3" id="categories-holder">
-              <span
-                class="badge text-bg-light border border-secondary p-2 me-1 mb-2 category-badge"
-                >success</span
-              >
-              <span
-                class="badge text-bg-light border border-secondary p-2 me-1 mb-2 category-badge"
-                >abort</span
-              >
-              <span
-                class="badge text-bg-light border border-secondary p-2 me-1 mb-2 category-badge"
-                >good</span
-              >
+              <span class="badge text-bg-light border border-secondary p-2 me-1 category-badge">success</span>
+              <span class="badge text-bg-light border border-secondary p-2 me-1 category-badge">abort</span>
+              <span class="badge text-bg-light border border-secondary p-2 me-1 category-badge">good</span>
             </div>
-            <!-- map -->
-            <div
-              id="map"
-              class="rounded-2 border border-secondary"
-              style="width: 100%; height: 500px"
-            ></div>
-            <br />
-            <button type="button" class="active btn mb-3 " id="confirmPosition">Confirm Position</button>
-            <br />
-            <p>On idle position: <span id="onIdlePositionView"></span></p>
-            <p>On click position: <span id="onClickPositionView"></span></p>
-            <!-- map end -->
-            <textarea name="md-text" id="my-text-area"></textarea>
+            <div class="accordion mb-3 " id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Location
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <!-- body 1 -->
+                    <!-- map -->
+                    <div class="input-group mb-3">
+                      <button type="button" class="btn btn-outline-secondary" id="confirmPosition">Confirm
+                        Position</button>
+                      <input readonly type="text" id="longitudeField" aria-label="Longitude"
+                        class="form-control"></input>
+                      <input readonly type="text" id="latitudeField" aria-label="Latitube" class="form-control"></input>
+                    </div>
+                    <div id="map" class="rounded-2 border border-secondary mb-3" style="width: 100%; height: 500px">
+                    </div>
+                  </div>
+                  <!-- map end -->
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Images
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body" id="innerAccordion">
+                    <!-- body 2 -->
+                    <div class="input-group mb-3">
+                      <button type="button" class="btn btn-outline-secondary" id="addImage">Add Image</button>
+                      <input type="url" id="imageUrlField" aria-label="image url"
+                        class="form-control"></input>
+                    </div>
+                    <div class="accordion" id="innerAccordion">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1">
+                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                            https://pbs.twimg.com/media/EZvjK-XXkAA0v4X?format=jpg&name=large
+                          </button>
+                        </h2>
+                        <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#innerAccordion">
+                          <div class="accordion-body">
+                            <img src="https://pbs.twimg.com/media/EZvjK-XXkAA0v4X?format=jpg&name=large" alt="" class="addedImage"> 
+                            <button type="button" class="btn btn-danger d-block mt-3 mb-3" style="margin-left: auto; margin-right: auto;">
+                              remove
+                            </button> 
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading2">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                            https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=large
+                          </button>
+                        </h2>
+                        <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#innerAccordion">
+                          <div class="accordion-body">
+                            <img src="https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=large" alt="" class="addedImage">
+                            <button type="button" class="btn btn-danger d-block mt-3 mb-3" style="margin-left: auto; margin-right: auto;"> 
+                              remove
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                            https://pbs.twimg.com/media/Ehtn4sDWsAARNX7?format=jpg&name=large
+                          </button>
+                        </h2>
+                        <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#innerAccordion">
+                          <div class="accordion-body"> 
+                            <img src="https://pbs.twimg.com/media/Ehtn4sDWsAARNX7?format=jpg&name=large" alt="" class="addedImage">  
+                            <button type="button" class="btn btn-danger d-block mt-3 mb-3" style="margin-left: auto; margin-right: auto;">
+                              remove
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    
+                    <!-- carousel -->
+                    <!-- <div class="d-flex justify-content-center mb-3 mt-3"> 
+                      <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel"
+                        style="width: 50%; height: 50%;">
+                        <div class="carousel-inner rounded-3">
+                          <div class="carousel-item active">
+                            <img src="https://pbs.twimg.com/media/EZvjK-XXkAA0v4X?format=jpg&name=large"
+                              class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=large"
+                              class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="https://pbs.twimg.com/media/Ehtn4sDWsAARNX7?format=jpg&name=large"
+                              class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                          data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                          data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                    </div> -->
+                    <!-- carousel end -->
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Text
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <!-- body 3 -->
+                    <textarea name="md-text" id="my-text-area"></textarea>
+                  </div>
+                </div>
+              </div>
+            </div>
           </form>
         </div>
         <!-- form contianer end -->
@@ -159,46 +227,31 @@
     </main>
 
     <script src="node_modules/easymde/dist/easymde.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script>
       const easyMDE = new EasyMDE({
         element: document.getElementById("my-text-area"),
       });
-      // Get element references
-      var confirmBtn = document.getElementById("confirmPosition");
-      var onClickPositionView = document.getElementById("onClickPositionView");
-      var onIdlePositionView = document.getElementById("onIdlePositionView");
 
-      // Initialize locationPicker plugin
+      var confirmBtn = document.getElementById("confirmPosition");
+      var longitudeField = document.getElementById("longitudeField");
+      var latitudeField = document.getElementById("latitudeField");
+
       var lp = new locationPicker(
         "map",
-        {
-          setCurrentPosition: true, // You can omit this, defaults to true
-        },
-        {
-          zoom: 15, // You can set any google map options here, zoom defaults to 15
-        }
+        { setCurrentPosition: true },
+        { zoom: 15 }
       );
 
-      // Listen to button onclick event
       confirmBtn.onclick = function () {
-        // Get current location and show it in HTML
         var location = lp.getMarkerPosition();
-        onClickPositionView.innerHTML =
-          "The chosen location is " + location.lat + "," + location.lng;
+        longitudeField.value = location.lng;
+        latitudeField.value = location.lat;
       };
 
-      // Listen to map idle event, listening to idle event more accurate than listening to ondrag event
-      // google.maps.event.addListener(lp.map, "idle", function (event) {
-      //   // Get current location and show it in HTML
-      //   var location = lp.getMarkerPosition();
-      //   onIdlePositionView.innerHTML =
-      //     "The chosen location is " + location.lat + "," + location.lng;
-      // });
     </script>
   </body>
+
 </html>
