--- a/create_post.html
+++ b/create_post.html
@@ -109,7 +109,7 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                   data-bs-parent="#accordionExample">
-                  <div class="accordion-body" id="innerAccordion">
+                  <div class="accordion-body">
                     <!-- body 2 -->
                     <div class="input-group mb-3">
                       <button type="button" class="btn btn-outline-secondary" id="addImage">Add Image</button>
@@ -117,84 +117,7 @@
                         class="form-control"></input>
                     </div>
                     <div class="accordion" id="innerAccordion">
-                      <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading1">
-                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
-                            https://pbs.twimg.com/media/EZvjK-XXkAA0v4X?format=jpg&name=large
-                          </button>
-                        </h2>
-                        <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#innerAccordion">
-                          <div class="accordion-body">
-                            <img src="https://pbs.twimg.com/media/EZvjK-XXkAA0v4X?format=jpg&name=large" alt="" class="addedImage"> 
-                            <button type="button" class="btn btn-danger d-block mt-3 mb-3" style="margin-left: auto; margin-right: auto;">
-                              remove
-                            </button> 
-                          </div>
-                        </div>
-                      </div>
-                      <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading2">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                            https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=large
-                          </button>
-                        </h2>
-                        <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#innerAccordion">
-                          <div class="accordion-body">
-                            <img src="https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=large" alt="" class="addedImage">
-                            <button type="button" class="btn btn-danger d-block mt-3 mb-3" style="margin-left: auto; margin-right: auto;"> 
-                              remove
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading3">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                            https://pbs.twimg.com/media/Ehtn4sDWsAARNX7?format=jpg&name=large
-                          </button>
-                        </h2>
-                        <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#innerAccordion">
-                          <div class="accordion-body"> 
-                            <img src="https://pbs.twimg.com/media/Ehtn4sDWsAARNX7?format=jpg&name=large" alt="" class="addedImage">  
-                            <button type="button" class="btn btn-danger d-block mt-3 mb-3" style="margin-left: auto; margin-right: auto;">
-                              remove
-                            </button>
-                          </div>
-                        </div>
-                      </div>
                     </div>
-                    
-                    <!-- carousel -->
-                    <!-- <div class="d-flex justify-content-center mb-3 mt-3"> 
-                      <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel"
-                        style="width: 50%; height: 50%;">
-                        <div class="carousel-inner rounded-3">
-                          <div class="carousel-item active">
-                            <img src="https://pbs.twimg.com/media/EZvjK-XXkAA0v4X?format=jpg&name=large"
-                              class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="https://pbs.twimg.com/media/Ez5dsbGX0AEGcFI?format=jpg&name=large"
-                              class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="https://pbs.twimg.com/media/Ehtn4sDWsAARNX7?format=jpg&name=large"
-                              class="d-block w-100" alt="...">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                          data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                          data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
-                    </div> -->
-                    <!-- carousel end -->
                   </div>
                 </div>
               </div>
@@ -209,6 +132,13 @@
                   data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <!-- body 3 -->
+                    <div class="input-group mb-3">
+                      <!-- <span class="input-group-text text-bg-light"> Overview :</span> -->
+                      <div class="input-group">
+                        <span class="input-group-text text-bg-light "> Overview : </span>
+                        <textarea class="form-control" aria-label="overview"></textarea>
+                      </div>
+                    </div>
                     <textarea name="md-text" id="my-text-area"></textarea>
                   </div>
                 </div>
