--- a/create_post.html
+++ b/create_post.html
@@ -11,9 +11,9 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="node_modules/easymde/dist/easymde.min.css" />
-    <link type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key="></link>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key="></script>
     <script src="https://unpkg.com/location-picker/dist/location-picker.min.js"></script>
-  </head>
+  </head> 
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body border-dark p-3">
@@ -133,7 +133,7 @@
                     <div class="input-group mb-3">
                       <div class="input-group">
                         <span class="input-group-text text-bg-light "> Overview : </span>
-                        <textarea class="form-control" aria-label="overview"></textarea>
+                        <textarea id="overview" class="form-control" aria-label="overview"></textarea>
                       </div>
                     </div>
                     <textarea name="md-text" id="my-text-area"></textarea>
@@ -141,14 +141,17 @@
                 </div>
               </div>
             </div>
-            <div class="alert alert-danger">
+            <div class="alert alert-danger" id="categoryErr">
               There Should be atleast one category
             </div>
-            <div class="alert alert-danger">
+            <div class="alert alert-danger" id="emptyErr">
               There are some empty fields
             </div>
-            <div class="alert alert-danger">
+            <div class="alert alert-danger" id="shortErr">
               The Article Text is too short
+            </div>
+            <div class="alert alert-danger" id="imagesErr">
+              Include atleast three images
             </div>
             <button type="button" class="btn btn-info" id="submitButton">
               Submit
@@ -162,7 +165,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 
 </html>
