showing an alert when admin deletes an article

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
           or you can create a new blog post from scratch
         </p>
         <!-- search bar -->
-        <form class="d-flex pt-3 input-group input-group-lg" role="search">
+        <!-- <form class="d-flex pt-3 input-group input-group-lg" role="search">
           <input
             class="form-control"
             type="search"
@@ -85,7 +85,7 @@
             Search
           </button>
           <div class=""></div>
-        </form>
+        </form> -->
         <!-- cards container -->
         <div class="container pt-4"  id="cards-container">
           <div class="card m-2 col-12 col-md-12 col-lg-12 ">
@@ -204,6 +204,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="module" src="home.js"></script> 
   </body>
 </html>
