turned the website into a desktop application using electron js

--- a/home.html
+++ b/home.html
@@ -41,22 +41,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active"  id="nav-route" aria-current="page" href="#">Home</a>
+              <a class="nav-link active"  id="nav-route" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" id="nav-route" aria-current="page" href="#"
+              <a class="nav-link active" id="nav-route" aria-current="page" href="/create"
                 >Create</a
               >
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link active" id="nav-route" aria-current="page" href="#">About</a>
-            </li>
+            </li> -->
           </ul>
-          <button class="btn btn-dark">
+          <!-- <button class="btn btn-dark">
             <a aria-current="page" href="#" style="text-decoration: none; color: white !important;"
               >Register</a
             >
-          </button>
+          </button> -->
         </div>
       </div>
     </nav>
@@ -88,7 +88,7 @@
         </form> -->
         <!-- cards container -->
         <div class="container pt-4"  id="cards-container">
-          <div class="card m-2 col-12 col-md-12 col-lg-12 ">
+          <!-- <div class="card m-2 col-12 col-md-12 col-lg-12 ">
             <img
               src="https://pbs.twimg.com/media/EVgVuB4XgAEiZ8G?format=jpg&name=large"
               alt="  "
@@ -195,7 +195,7 @@
               <li class="list-group-item"><i class="bi-tags-fill pe-3"></i> Categories</li>
               <li class="list-group-item"><i class="bi-play-btn-fill pe-3"></i> Video Url</li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
