--- a/create_post.html
+++ b/create_post.html
@@ -28,18 +28,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" id="nav-route" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" id="nav-route" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" id="nav-route" aria-current="page" href="#">Create</a>
+              <a class="nav-link active" id="nav-route" aria-current="page" href="/create">Create</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link active" id="nav-route" aria-current="page" href="#">About</a>
-            </li>
+            </li> -->
           </ul>
-          <button class="btn btn-dark">
+          <!-- <button class="btn btn-dark">
             <a id="registerBtn" aria-current="page" href="#">Register</a>
-          </button>
+          </button> -->
         </div>
       </div>
     </nav>
