--- a/edit_post.html
+++ b/edit_post.html
@@ -33,13 +33,13 @@
             <li class="nav-item">
               <a class="nav-link active" id="nav-route" aria-current="page" href="#">Create</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link active" id="nav-route" aria-current="page" href="#">About</a>
-            </li>
+            </li> -->
           </ul>
-          <button class="btn btn-dark">
+          <!-- <button class="btn btn-dark">
             <a id="registerBtn" aria-current="page" href="#">Register</a>
-          </button>
+          </button> -->
         </div>
       </div>
     </nav>
