adding set location functionality for adding locations from outside and compiling the webstite into a desktop app using electron js

--- a/create_post.html
+++ b/create_post.html
@@ -87,10 +87,11 @@
                     <!-- body 1 -->
                     <!-- map -->
                     <div class="input-group mb-3">
+                      <button type="button" class="btn btn-outline-secondary" id="setPosition">Set</button>
                       <button type="button" class="btn btn-outline-secondary" id="confirmPosition">Confirm
                         Position</button>
-                      <input readonly type="text" id="latitudeField" aria-label="Latitube" class="form-control"></input>
-                      <input readonly type="text" id="longitudeField" aria-label="Longitude"
+                      <input type="text" id="latitudeField" aria-label="Latitube" class="form-control"></input>
+                      <input type="text" id="longitudeField" aria-label="Longitude"
                         class="form-control"></input>
                     </div>
                     <div id="map" class="rounded-2 border border-secondary mb-3">
