--- a/edit_post.html
+++ b/edit_post.html
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" id="nav-route" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" id="nav-route" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" id="nav-route" aria-current="page" href="#">Create</a>
+              <a class="nav-link active" id="nav-route" aria-current="page" href="/create">Create</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link active" id="nav-route" aria-current="page" href="#">About</a>
@@ -87,10 +87,11 @@
                     <!-- body 1 -->
                     <!-- map -->
                     <div class="input-group mb-3">
+                      <button type="button" class="btn btn-outline-secondary" id="setPosition">Set</button>
                       <button type="button" class="btn btn-outline-secondary" id="confirmPosition">Confirm
                         Position</button>
-                      <input readonly type="text" id="latitudeField" aria-label="Latitube" class="form-control"></input>
-                      <input readonly type="text" id="longitudeField" aria-label="Longitude"
+                      <input type="text" id="latitudeField" aria-label="Latitube" class="form-control"></input>
+                      <input type="text" id="longitudeField" aria-label="Longitude"
                         class="form-control"></input>
                     </div>
                     <div id="map" class="rounded-2 border border-secondary mb-3">
